add event crud routes
