# docs/swagger/gncs-api.yml
@@ -9,6 +9,8 @@ servers:
 tags:
   - name: Auth
     description: Auth Route
+  - name: Event
+    description: Event Route
 
 paths:
   /api/health:
@@ -48,6 +50,83 @@ paths:
       responses:
         '200':
           description: OK
+  /api/events:
+    get:
+      tags:
+        - Event
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          description: OK
+    post:
+      tags:
+        - Event
+      description: Create a new Event
+      requestBody:
+        $ref: '#/components/requestBodies/createEventBody'
+      responses:
+        '201':
+          $ref: '#/components/schemas/Event'
+
+  /api/events/{id}:
+    get:
+      tags:
+        - Event
+      description: Get Event by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: number
+          description: Event ID
+          example: 1
+      responses:
+        '200':
+          description: Successful fetch a Event by ID 
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
+    
+    patch:
+      tags:
+        - Event
+      description: Update a Event by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: number
+          description: Event ID
+          example: 1
+      requestBody:
+        $ref: '#/components/requestBodies/createEventBody'
+      responses:
+        '200':
+          description: Successful fetch a Event by ID 
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
+    
+    delete:
+      tags:
+        - Event
+      description: Delete a Event by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: number
+          description: Event ID
+          example: 1
+      responses:
+        '204':
+          description: Delete Event successful.
           
 
 components:
@@ -63,6 +142,26 @@ components:
           format: email
         password:
           type: string
+    Event:
+      type: object
+      required:
+        - title
+      properties:
+        title:
+          type: string
+          example: Fake Test Event
+          description: This Event name has to unique
+        description:
+          type: string
+          description: The Information for the Event
+          example: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        prePayment:
+          type: number
+          example: 12.00
+        boxOffice:
+          type: number
+          example: 15.00
+        
     Token:
       type: object
       properties:
@@ -128,4 +227,10 @@ components:
               example:
                 email: fake.email@mail.com
                 password: password1
+    createEventBody:
+      description: Successful create a new Event
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Event'
 
