# start/routes.ts
@@ -27,6 +27,14 @@ Route.group(() => {
     Route.post('/login', 'AuthController.login')
     Route.post('/register', 'AuthController.register')
   }).prefix('auth')
+
+  // Route.group(() => {
+  //   Route.get('/', 'EventsController.index')
+  //   Route.post('/', 'EventsController.store')
+  //   Route.get('/:id', 'EventsController.show')
+  // }).prefix('events')
+  Route.resource('events', 'EventsController').apiOnly()
+
   Route.get('/health', async ({ response }: HttpContextContract) => {
     const report = await HealthCheck.getReport()
     return report.healthy ? response.ok(report) : response.badRequest(report)
